Melhorias nos mecanismos de IA